Refatoração da classe noticiasModel.js para NoticiasDAO.js e suas chamadas

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -2,26 +2,21 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Formuláio de cadastro de Notícia</title>
+			<title>Formulário de cadastro de Notícia</title>
 		</head>
 	<body>
 
-		<h1>Adicionar Notícia</h1>
-		<br/>
+		<h1>Adicionar notícia</h1>
+		<br />
 
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label>
-			<input type="text" name="titulo" id="titulo" placeholder="Título da notícia">
-			<br/>
-
+			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia" />
+			<br />
 			<label>Notícia</label>
-
 			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
-			<br/>
-			<br/>
-			
-			<input type="submit" name="Enviar">
-
+			<br />
+			<input type="submit" value="Enviar" />
 		</form>
 
 	</body>
