--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -8,20 +8,20 @@
 
 		<h1>Notícias</h1>
 
-
 		<table>
+			
 			<tr>
-					<td>ID</td>
-					<td>Titulo</td>
+				<td>ID</td>
+				<td>Título</td>
 			</tr>
-			<% for(var i = 0; i < noticias.length; i++) { %>
-			<tr>
+			<% for(var i = 0; i < noticias.length; i++){ %>
+				<tr>
 					<td><%= noticias[i].id_noticia %></td>
-					<td><a href=""><%= noticias[i].titulo %></a></td>
-			</tr>
+					<td><a href="/noticia/<%= noticias[i].id_noticia %>"><%= noticias[i].titulo %></a></td>
+				</tr>
 			<% } %>
-		</table>
 
+		</table>
 
 	</body>
 </html>
